hphp/test/zend/bad/ext-gd/imageinterlace_error2.php
<?php
$image = fopen('php://stdin', 'r');
var_dump(imageinterlace($image));
?>